--- a/index.html
+++ b/index.html
@@ -1,13 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Shorten your URLs with just a click using Scissor"
+		/>
+		<meta author="Alegu Franklin Ominyi" />
+		<title>Scissor | Developed by Alegu Franklin</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"
+			integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+
+		<script>
+			/*smooth scroll effect*/
+			$(function () {
+				$("a.smooth-scroll").click(function (event) {
+					event.preventDefault();
+
+					//get id like #about, #home, etc
+					let section = $(this).attr("href");
+
+					$("html, body").animate(
+						{
+							scrollTop: $(section).offset().top,
+						},
+						2000
+					);
+				});
+			});
+
+			/*Hide navbar on scroll*/
+			let prevScrollPos = window.pageYOffset;
+			window.onscroll = () => {
+				let currentScrollPos = window.pageYOffset;
+				if (prevScrollPos > currentScrollPos) {
+					document.querySelector(".navbar").style.top = "0";
+				} else {
+					document.querySelector(".navbar").style.top = "-600px";
+				}
+				prevScrollPos = currentScrollPos;
+			};
+
+			$(window).scroll(function () {
+				let scroll = $(window).scrollTop();
+				if (scroll > 300) {
+					$(".navbar").css("border-bottom", "2px solid #ddd");
+				} else {
+					$(".navbar").css("border-bottom", "0px solid #ddd");
+				}
+			});
+		</script>
+	</body>
 </html>
